# unicode-collation

./: .gitignore  Cargo.toml  README.md  README.tpl  build.rs
src/: lib.rs  multistage.rs  syntax.pest  table.rs
