[package]
name = "unicode-collation"
version = "0.0.2-alpha.0"
authors = ["Ivan Dubrov <dubrov.ivan@gmail.com>"]
categories = []
keywords = ["unicode", "collate", "text"]
description = "Unicode collation algorithm according to Technical Standard #10."
repository = "https://github.com/idubrov/unicode-collation"
license = "MIT/Apache-2.0"
readme = "README.md"
exclude = ["/data/**"]

[dependencies]
unic-normal = "0.7.0"
pest = "1.0"
pest_derive = "1.0"
